--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ p{
 /*Generic CSS*/
 .section-title{
 	padding-top: 90px;
-	padding-bottom: 50px;
+	padding-bottom: 90px;
 }
 
 .section-title h2{
@@ -24,7 +24,7 @@ p{
 	text-align: center;
 	color: #333;
 	font-size: 30px;
-	font-weight: 400;
+	font-weight: 500;
 	text-transform: uppercase;
 }
 
@@ -34,13 +34,13 @@ p{
 	bottom: -15px;
 	left: 50%;
 	width: 60px;
-	height: 1px;
+	height: 2px;
 	background-color: #129CF3;
 	margin-left: -30px;
 }
 
 .section-title p{
-	color: #333;
+	color: #4D4D4D;
 	font-size: 18px;
 	line-height: 28px;
 	font-weight: 300;
@@ -78,7 +78,7 @@ p{
 }
 
 .header-overlay{
-	background-color: rgba(0,0,0,0.81);
+	background-color: rgba(0,0,0,0.8);
 }
 
 #main-logo{
@@ -88,10 +88,9 @@ p{
 }
 
 .header-text h1{
-	font-family: 'Bad Script', cursive; 
 	color: #fff;
 	font-size: 45px;
-	font-weight: 500;
+	font-weight: 600;
 	line-height: 50px;
 	text-transform: uppercase;
 	padding-top: 30px;
@@ -172,7 +171,15 @@ p{
 }
 
 /*About Us*/
+#white{
+	background-image: url("../images/background.jpg");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 .choose-us-wrapper{
+	background-color: rgba(0, 0, 64, 0.2);
 	padding-top: 30px;
 }
 
@@ -186,9 +193,9 @@ p{
 
 .choose-us-title h2{
 	text-transform: uppercase;
-	font-weight: 600;
+	font-weight: 500;
 	font-size: 30px;
-	line-height: 37px;
+	line-height: 40px;
 	position: relative;
 }
 
@@ -198,19 +205,19 @@ p{
 	bottom: -15px;
 	left: 0;
 	width: 70px;
-	height: 1px;
+	height: 2px;
 	background-color: #129CF3;
 }
 
 .choose-us-title p{
 	margin-top: 40px;
-	font-size: 19px;
+	font-size: 18px;
 	line-height: 24px;
-	padding-bottom: 10px;
+	padding-bottom: 30px;
 }
 .choose-us-item{
 	position: relative;
-	padding-bottom: 4px;
+	padding-bottom: 10px;
 	padding-left: 80px;
 }
 
@@ -221,7 +228,7 @@ p{
 }
 
 .choose-us-item div i{
-	font-size: 55px;
+	font-size: 50px;
 	color: #129CF3;
 	transition: all 1s;
 	-webkit-transition: all 1s;
@@ -239,4 +246,64 @@ p{
 .choose-us-item p{
 	color: #4D4D4D;
 	font-size: 15px;
+}
+
+/*Testimonial*/
+.center-block{
+	width: 15%;
+}
+
+.testimonial{
+	background-image: url("../images/background/b1.png");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	-webkit-background-size: cover;
+	background-position: 50% 50%;
+}
+
+.testimonial-overlay{
+	background-color: rgba(0,0,0,0.85);
+	padding-top: 80px;
+	padding-bottom: 30px;
+}
+.carousel-indicators{
+	bottom: -10px;
+}
+
+.carousel-inner .carousel-item img{
+	border: 2px solid #129CF3;
+	border-radius: 50%;
+	padding: 3px;
+}
+
+.testimonial-caption{
+	padding: 60px;
+}
+
+.testimonial-caption h2{
+	color: #129CF3;
+	text-transform: uppercase;
+	font-weight: 600;
+	font-size: 30px;
+	margin-top: 20px;
+}
+
+.testimonial-caption h4{
+	color: #129CF3;
+}
+
+.testimonial-caption h4 span{
+	color: #D8D8D8;
+	font-style: italic;
+	font-weight: 300;
+}
+
+.testimonial-caption p{
+	color: #D8D8D8;
+	font-size: 18px;
+	line-height: 27px;
+	padding-top: 25px;
 }
