--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ p{
 .choose-us-wrapper{
 	background-color: rgba(0, 0, 64, 0.2);
 	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 .about-us-video video{
@@ -306,4 +307,86 @@ p{
 	font-size: 18px;
 	line-height: 27px;
 	padding-top: 25px;
+}
+
+/*Features*/
+.features-inner-wrapper{
+	padding-bottom: 30px;
+	padding-top: 30px;
+	background-color: rgba(0, 0, 64, 0.2);
+}
+.left-feature-item{
+	position: relative;
+	padding-right: 90px;
+	margin-bottom: 65px;
+	text-align: right;
+	margin-top: 50px;
+}
+.left-feature-item-icon{
+	position: absolute;
+	font-size: 40px;
+	color: #129CF3;
+	right: 0;
+	top: -8px;
+	width: 90px;
+	height: 90px;
+	text-align: center; 
+}
+.left-feature-item h3{
+	text-transform: uppercase;
+	font-size: 25px;
+	font-weight: 400;
+	margin-bottom: 25px;
+	color: #333;
+}
+.left-feature-item p{
+	color:#333;
+	font-size:16px;
+	font-weight:300;
+	line-height: 25px;
+}
+
+.feature-problem img{
+	display: block;
+  	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 35px;
+	width: 90%;
+}
+#imgsize{
+	width: 75%;
+}
+#imgsize2{
+	width: 80%;
+}
+
+.right-feature-item{
+	position: relative;
+	padding-left: 90px;
+	margin-bottom: 65px;
+	margin-top: 50px;
+	text-align: left;
+}
+.right-feature-item-icon{
+	position: absolute;
+	font-size: 40px;
+	color: #129CF3;
+	left: 0;
+	top: -8px;
+	width: 90px;
+	height: 90px;
+	text-align: center;
+}
+.right-feature-item h3{
+	text-transform: uppercase;
+	font-size: 25px;
+	font-weight: 400;
+	margin-bottom: 25px;
+	color: #333;
+}
+.right-feature-item p{
+	color:#333;
+	font-size:16px;
+	font-weight:300;
+	line-height: 25px;
 }
