Initializing Donate Now Section
To be updated.

--- a/css/style.css
+++ b/css/style.css
@@ -390,3 +390,39 @@ p{
 	font-weight:300;
 	line-height: 25px;
 }
+
+
+/*Donate  now*/
+.donate-now{
+	background-color: #1A1A1A;
+	padding-top: 100px;
+	padding-bottom: 70px;
+}
+
+.donate-now p{
+	color: #dfdfdf;
+	font-size: 18px;
+	font-weight: 300;
+}
+
+.btn-donate-now,
+.btn-donate-now:active,
+.btn-donate-now:focus,
+.btn-donate-now:visited
+{
+	background-color: #129CF3;
+	border: 1px solid #129CF3;
+	color: #fff;
+	border-radius: 3px;
+	margin: 5px;
+	padding: 15px 35px;
+	text-transform: uppercase;
+	transition: all 1s;
+	-webkit-transition: all 1s;
+	-moz-transition: all 1s;
+	-o-transition: all 1s;
+}
+.btn-donate-now:hover{
+	background-color: #1274B1;
+	border-color: #316B90;
+}
