--- a/css/style.css
+++ b/css/style.css
@@ -426,3 +426,45 @@ p{
 	background-color: #1274B1;
 	border-color: #316B90;
 }
+
+/*Counters*/
+.counter{
+	background-image: url("../images/background/b6.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	-webkit-background-size: cover;
+}
+
+.counter-overlay{
+	padding-top: 120px;
+	padding-bottom: 120px;
+	background-color: rgba(0,0,0,0.8);
+}
+
+.counter-item i{
+	color: #129CF3;
+	font-size: 60px;
+}
+
+.counter-item h2{
+	color: #d7dadb;
+	font-weight: 600;
+	text-transform: uppercase;
+	font-size: 35px;
+	margin-top: 15px;
+	margin-bottom: 1px;
+	font-family: "Source Sans Pro", sans-serif;
+}
+
+.counter-item p{
+	color: #D7DADB;
+	font-size: 20px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-weight: 300;
+	text-transform: uppercase;
+	font-family: "Source Sans Pro", sans-serif;
+}
