--- a/css/style.css
+++ b/css/style.css
@@ -67,14 +67,12 @@ p{
 
 /*Navigation*/
 .navbar-dark{
-	padding: 0px 20px;
-    background:rgba(0,0,0,0.5);
+	padding: 0px 15px;   /*top right bottom left*/
     z-index: 110;
     transition: all 1s;
     -moz-transition: all 1s;
     -o-transition: all 1s;
     -webkit-transition: all 1s;
-    border-bottom: 1px solid #333;
 }
 .navbar-dark .navbar-nav .nav-link{
 	color: #ccc;
@@ -83,7 +81,7 @@ p{
     -moz-transition: all 1s;
     -o-transition: all 1s;
     -webkit-transition: all 1s;
- 	padding: 6px 20px;
+ 	padding: 0px 15px;
 }
 .navbar-dark .navbar-nav .nav-link:hover{
 	color: #129CF3;
@@ -92,7 +90,7 @@ p{
 	color: #ccc;
 }
 .navbar-brand img{
-	padding: 0px 10px;
+	padding: 2px;
 	transition: all 1s;
     -moz-transition: all 1s;
     -o-transition: all 1s;
@@ -509,6 +507,7 @@ p{
 .contact-us-form{
 	background-color: rgba(0, 0, 64, 0.2);
 	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .contact-us-form .form-control{
@@ -607,13 +606,71 @@ p{
 /*footer*/
 .footer{
 	background-color: #1A1A1A;
-	padding-bottom: 20px;
-	padding-top: 50px;
-	border-bottom: 3px solid #129CF3;	
+	padding-bottom: 60px;
+	padding-top: 35px;
+	border-bottom: 3px solid #129CF3;
+}
+
+.footer-title {
+	margin:0;
+	margin-bottom:15px;
+	color:rgba(255,255,255,.6);
+	font-weight:400;
+	font-size:20px;
+	text-transform:uppercase;
+	position:relative;
+}
+.footer-title:after {
+	content:"";
+	display:block;
+	margin-top:13px;
+	width:100%;
+	height:2px;
+	background-color:rgba(255,255,255,.6);
+	transform:scaleX(.2) translateZ(0);
+	transform-origin:0;
+	transition:transform .3s ease;
+}
+.footer-col:hover .footer-title:after {
+	transform:scaleX(1) translateZ(0);
+	transition:transform .3s ease;
+}
+.footer-sm-block {
+	border-radius: 15px;
+	color: #129CF3;
+	display:flex;
+	width:100%;
+	background-color:rgba(255,255,255,.08);
+	align-items:center;
+	margin-bottom: 8px;
+	transition:all 250ms linear;
+}
+.footer-sm-block .fa {
+	border-radius: 50%;
+	width:36px;
+	height:36px;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	flex-grow:0;
+	flex-shrink:0;
+	text-align:center;
+	background-color:rgba(255,255,255,.05);
+}
+.footer-sm-block .footer-sm-text {
+	margin-left:15px;
+	font-size:14px;
+	flex-grow:1;
+	flex-shrink:1;
+}
+.footer-sm-block:hover {
+	background-color:rgba(255,255,255,.2);
+	color:#fff;
 }
 
 #copyright{
 	width: 100%;
+	margin-left: -80px;
 }
 #copyright p{
 	color: #8C8BBA;
@@ -627,30 +684,65 @@ p{
 	color: #129CF3;
 }
 
+.footer-links ul {
+	list-style:none;
+	margin:0;
+	padding:0;
+	margin-top:-10px;
+	margin-bottom: 20px;
+}
+.footer-links ul li {
+	padding:0;
+	margin:0;
+	color:#129CF3;
+	padding-bottom: 1px;
+}
+.footer-links ul li a{
+	color:#129CF3;
+}
+.footer-links a,
+.footer-links a:focus,
+.footer-links a:link,
+.footer-links a:visited {
+	display:block;
+	text-decoration:none;
+	font-size:14px;
+	padding:3px 0px;
+	transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+}
+.footer-links a:hover {
+	color:#EEE;
+}
 .language{
 	display: inline-block;
-	margin-top: 5px;
-	margin-left: 50px;
-	padding: 20px;
 	text-align: right;
+	padding-bottom: 0px;
+	padding-top: 0px;
 }
 .languagepicker {
 	-webkit-appearance: none;
     -moz-appearance: none;
     -o-appearance: none;
     appearance: none;
-	width: 200px;
+	width: 260px;
+	height: 40px;
 	border: 1px solid #129CF3;
 	border-bottom: 2px #129CF3 solid;
-	border-radius: 5px;
+	border-radius: 15px;
 	line-height: normal;
     padding: 7px 10px 6px 10px;
-    background: url("../images/arrow.png") 95% /10px no-repeat #fff;
+    background: url("../images/arrow.png") 95% /10px no-repeat rgba(255,255,255,.08);
     margin-top: 1px;
     font-size: 14px;
+    color: #129CF3;
 }
 
 .scroll-top{
+	margin-top: 90px;
+	margin-left: 100px;
 	display: inline-block;
 }
 .scroll-top a{
