--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,25 @@ p{
 	font-size: 14px;
 }
 
+#ABOUT{
+	background-image: url("../images/background.jpg");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+#FEATURES{
+	background-image: url("../images/background.jpg");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+#CONTACT{
+	background-image: url("../images/background.jpg");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 /*Generic CSS*/
 .section-title{
 	padding-top: 90px;
@@ -75,7 +94,7 @@ p{
     -webkit-transition: all 1s;
 }
 .navbar-dark .navbar-nav .nav-link{
-	color: #ccc;
+	color: #B5B5B5;
     font-family: "Raleway", sans-serif;
     transition: all 1s;
     -moz-transition: all 1s;
@@ -87,7 +106,7 @@ p{
 	color: #129CF3;
 }
 .navbar-dark .navbar-nav .nav-link:focus{
-	color: #ccc;
+	color: #B5B5B5;
 }
 .navbar-brand img{
 	margin-top: -15px;
@@ -101,12 +120,15 @@ p{
     -o-transition: all 1s;
     -webkit-transition: all 1s;
 }
+.navbar-dark .navbar-nav> .active>a,{
+	color: #B5B5B5;
+}
 
 .navbar-dark .navbar-nav> .active>a,
-.navbar-dark .navbar-nav> .active>:hover,
-.navbar-dark .navbar-nav> .active>:focus{
+.navbar-dark .navbar-nav> .active>a:hover,
+.navbar-dark .navbar-nav> .active>a:focus{
 	background-color: transparent;
-	color: #129CF3;
+	color: #129CF3 !important;
 }
 
 /*Header*/
@@ -210,12 +232,6 @@ p{
 }
 
 /*About Us*/
-#white{
-	background-image: url("../images/background.jpg");
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
 
 .choose-us-wrapper{
 	background-color: rgba(0, 0, 64, 0.2);
